feat: [CDS-88477]: migrating canary as custom stage if no service (#436)